--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
   "sideEffects": false,
   "dependencies": {
     "@blockone/eosjs-signature-provider-interface": "^4.2.0",
-    "@blockone/ricardian-template-toolkit": "^0.0.12",
     "bip38": "^2.0.2",
     "bs58": "^4.0.1",
     "classnames": "^2.2.6",
-    "eosjs": "20.0.0-92da292.0",
+    "eosjs": "^20.0.0",
     "eosjs-ecc": "^4.0.2",
     "hash.js": "1.1.5",
     "lodash": "^4.17.11",
@@ -36,6 +35,7 @@
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "ricardian-template-toolkit": "^0.1.2",
     "ripemd160": "^2.0.2",
     "uuid": "^3.3.2",
     "wif": "^2.0.6"
