--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
-    "bip38": "^2.0.2",
-    "bs58": "^4.0.1",
-    "classnames": "^2.2.6",
-    "eosjs": "^20.0.0",
-    "eosjs-ecc": "^4.0.2",
-    "eosjs-signature-provider-interface": "^0.1.1",
+    "bip38": "2.0.2",
+    "bs58": "4.0.1",
+    "classnames": "2.2.6",
+    "eosjs": "20.0.0",
+    "eosjs-ecc": "4.0.2",
+    "eosjs-signature-provider-interface": "0.1.1",
     "hash.js": "1.1.5",
-    "lodash": "^4.17.11",
+    "lodash": "4.17.11",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.1.0",
@@ -36,9 +36,9 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "ricardian-template-toolkit": "^0.2.0",
-    "ripemd160": "^2.0.2",
-    "uuid": "^3.3.2",
-    "wif": "^2.0.6"
+    "ripemd160": "2.0.2",
+    "uuid": "3.3.2",
+    "wif": "2.0.6"
   },
   "devDependencies": {
     "@blockone/tslint-config-blockone": "^4.0.1",
