fixing security warnings

--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "classnames": "2.2.6",
     "eosjs": "20.0.0",
     "eosjs-ecc": "4.0.2",
-    "eosjs-signature-provider-interface": "0.1.1",
+    "eosjs-signature-provider-interface": "0.1.2",
     "hash.js": "1.1.5",
-    "lodash": "4.17.11",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "^2.16.0",
-    "react-transition-group": "^2.5.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "ricardian-template-toolkit": "^0.2.0",
+    "lodash": "4.17.12",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-redux": "5.1.0",
+    "react-router-dom": "4.3.1",
+    "react-scripts-ts": "3.1.0",
+    "react-transition-group": "2.5.3",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "ricardian-template-toolkit": "0.2.0",
     "ripemd160": "2.0.2",
     "uuid": "3.3.2",
     "wif": "2.0.6"
@@ -66,13 +66,13 @@
     "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.1.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-loader": "2.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "^7.10.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-crx-pack": "^1.0.2",
     "gulp-git": "^2.8.0",
     "gulp-json-editor": "^2.4.3",
@@ -91,7 +91,11 @@
     "worker-loader": "^2.0.0"
   },
   "resolutions": {
-    "@types/sinon": "5.0.2"
+    "lodash": "4.17.12",
+    "webpack-dev-server": "3.1.11",
+    "@types/sinon": "5.0.2",
+    "js-yaml": "3.13.1",
+    "braces": "2.3.2"
   },
   "scripts": {
     "build": "npm-run-all -p build-css build-js build-scripts",
