--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
-    "bip38": "2.0.2",
+    "bip38": "2.0.3",
     "bs58": "4.0.1",
     "classnames": "2.2.6",
     "eosjs": "20.0.0",
-    "eosjs-ecc": "4.0.2",
-    "eosjs-signature-provider-interface": "0.1.1",
+    "eosjs-ecc": "4.0.7",
+    "eosjs-signature-provider-interface": "0.1.2",
     "hash.js": "1.1.5",
     "lodash": "4.17.15",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-redux": "5.1.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "5.1.2",
     "react-router-dom": "4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "react-transition-group": "2.6.0",
-    "redux": "4.0.1",
+    "react-scripts-ts": "2.17.0",
+    "react-transition-group": "2.9.0",
+    "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "ricardian-template-toolkit": "0.2.0",
+    "ricardian-template-toolkit": "0.2.1",
     "ripemd160": "2.0.2",
-    "uuid": "3.3.2",
+    "uuid": "3.3.3",
     "wif": "2.0.6"
   },
   "devDependencies": {
@@ -72,11 +72,6 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
-    "gulp": "^4.0.2",
-    "gulp-crx-pack": "^1.0.2",
-    "gulp-git": "^2.10.0",
-    "gulp-json-editor": "^2.5.4",
-    "gulp-zip": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest-coverage-ratchet": "^0.2.3",
     "node-fetch": "^2.3.0",
@@ -91,14 +86,12 @@
     "worker-loader": "^2.0.0"
   },
   "resolutions": {
-    "@types/sinon": "5.0.2",
-    "handlebars": "4.5.3",
     "braces": "2.3.2",
-    "lodash": "4.17.15",
+    "handlebars": "4.5.3",
     "js-yaml": "3.13.1",
+    "mem": "4.0.0",
     "serialize-javascript": "2.1.1",
-    "webpack-dev-server": "3.1.11",
-    "mem": "4.0.0"
+    "webpack-dev-server": "3.1.11"
   },
   "scripts": {
     "build": "npm-run-all -p build-css build-js build-scripts",
