--- a/package.json
+++ b/package.json
@@ -19,92 +19,84 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
-    "bip38": "2.0.3",
+    "bip38": "3.0.0",
     "bs58": "4.0.1",
     "classnames": "2.2.6",
+    "core-js": "3.6.4",
     "elliptic": "6.5.2",
     "eosjs": "21.0.0-131a987.0",
     "eosjs-signature-provider-interface": "0.1.2",
-    "hash.js": "1.1.5",
+    "hash.js": "1.1.7",
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-redux": "5.1.2",
-    "react-router-dom": "4.3.1",
-    "react-scripts-ts": "2.17.0",
-    "react-transition-group": "2.9.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2",
+    "react-transition-group": "4.3.0",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
+    "regenerator-runtime": "0.13.3",
     "ricardian-template-toolkit": "0.2.1",
     "ripemd160": "2.0.2",
-    "uuid": "3.3.3",
+    "uuid": "3.4.0",
     "wif": "2.0.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-json-strings": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-import-meta": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
     "@blockone/tslint-config-blockone": "^4.0.1",
     "@types/bs58": "^4.0.0",
-    "@types/chrome": "^0.0.74",
+    "@types/chrome": "^0.0.92",
     "@types/classnames": "^2.2.7",
-    "@types/elliptic": "^6.4.10",
+    "@types/elliptic": "^6.4.12",
     "@types/enzyme": "^3.1.12",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/handlebars": "^4.0.39",
-    "@types/jest": "^22.2.3",
+    "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.119",
-    "@types/node": "^10.5.3",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-transition-group": "^2.0.15",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.3",
     "@types/redux-thunk": "^2.1.0",
     "@types/ripemd160": "^2.0.0",
     "@types/sinon-chrome": "^2.2.6",
     "@types/text-encoding": "^0.0.35",
     "@types/uuid": "^3.4.4",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-loader": "^8.0.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest-coverage-ratchet": "^0.2.3",
-    "node-fetch": "^2.3.0",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "react-scripts": "^3.3.0",
     "redux-devtools": "^3.4.1",
-    "sinon-chrome": "^2.3.2",
+    "sinon-chrome": "^3.0.1",
     "text-encoding": "^0.7.0",
-    "ts-loader": "^3.5.0",
-    "tslint-eslint-rules": "^5.3.1",
-    "typescript": "^3.3.3333",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
     "worker-loader": "^2.0.0"
   },
   "resolutions": {
-    "braces": "2.3.2",
-    "handlebars": "4.5.3",
-    "js-yaml": "3.13.1",
-    "mem": "4.0.0",
-    "serialize-javascript": "2.1.1",
-    "webpack-dev-server": "3.1.11"
+    "handlebars": "^4.5.3",
+    "node-sass": "^4.13.1"
   },
   "scripts": {
     "build": "npm-run-all -p build-css build-js build-scripts",
     "build-fix": "npm run lint --fix && npm run build",
     "build-css": "node-sass-chokidar src/ -o src/",
-    "build-js": "react-scripts-ts build",
+    "build-js": "react-scripts build",
     "build-scripts": "BABEL_ENV=production webpack --progress --config webpack.scripts.js",
-    "build-production": "npm-run-all lint build test-coverage test-ratchet",
-    "test": "react-scripts-ts test --env=jsdom",
-    "test-coverage": "react-scripts-ts test --coverage --env=jsdom --no-cache",
-    "test-ratchet": "jest-coverage-ratchet",
-    "eject": "react-scripts-ts eject",
+    "build-production": "npm-run-all lint build test-coverage",
+    "test": "react-scripts test --env=jsdom",
+    "test-coverage": "react-scripts test --coverage --env=jsdom --no-cache",
+    "eject": "react-scripts eject",
     "lint": "tslint \"src/**/*.ts{,?}\""
   },
   "jest": {
@@ -127,5 +119,17 @@
         "branches": 95.65
       }
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
