--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,11 @@
-// Manually removed or turned to "off" to conform to current rules, but should probably include:
-// @typescript-eslint/require-await
-// @typescript-eslint/explicit-function-return-type
-// @typescript-eslint/member-delimiter-style
-// arrow-body-style
-// @typescript-eslint/no-misused-promises -- likely fixed with explicit-function-return-type
-// @typescript-eslint/no-unused-vars
-// @typescript-eslint/no-inferrable-types
-// @typescript-eslint/explicit-member-accessibility
-// no-var
-// @typescript-eslint/await-thenable
-// @typescript-eslint/prefer-includes
-// max-len
-// @typescript-eslint/camelcase ??
-// @typescript-eslint/no-empty-interface
-// dot-notation
-// @typescript-eslint/no-var-requires
-// @typescript-eslint/quotes -- not sure why not working, because this is specified
-// max-classes-per-file
-// no-unused-expressions
-
-module.exports = {
+{
     "env": {
         "browser": true,
+        "es6": true,
         "node": true
     },
     "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking"
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -38,47 +17,30 @@ module.exports = {
         "@typescript-eslint/tslint"
     ],
     "rules": {
-        "@typescript-eslint/adjacent-overload-signatures": "error",
         "@typescript-eslint/array-type": "off",
-        "@typescript-eslint/await-thenable": "off",
-        "@typescript-eslint/ban-types": "error",
         "@typescript-eslint/camelcase": "off",
-        "@typescript-eslint/class-name-casing": "error",
-        "@typescript-eslint/consistent-type-assertions": "error",
         "@typescript-eslint/consistent-type-definitions": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/explicit-member-accessibility": "off",
-        "@typescript-eslint/indent": "off",
-        "@typescript-eslint/interface-name-prefix": "error",
         "@typescript-eslint/member-delimiter-style": "off",
         "@typescript-eslint/member-ordering": "off",
-        "@typescript-eslint/no-empty-function": "error",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-misused-new": "error",
-        "@typescript-eslint/no-misused-promises": "off",
-        "@typescript-eslint/no-namespace": "error",
         "@typescript-eslint/no-non-null-assertion": "error",
         "@typescript-eslint/no-parameter-properties": "off",
-        "@typescript-eslint/no-unnecessary-type-assertion": "off",
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/prefer-for-of": "error",
         "@typescript-eslint/prefer-function-type": "error",
-        "@typescript-eslint/prefer-includes": "off",
-        "@typescript-eslint/prefer-namespace-keyword": "error",
         "@typescript-eslint/quotes": "off",
         "@typescript-eslint/require-await": "off",
         "@typescript-eslint/semi": [
             "error",
             "never"
         ],
-        "@typescript-eslint/triple-slash-reference": "error",
-        "@typescript-eslint/type-annotation-spacing": "error",
-        "@typescript-eslint/unbound-method": "off",
         "@typescript-eslint/unified-signatures": "error",
         "comma-dangle": ["error", {
             "arrays": "only-multiline",
@@ -164,7 +126,6 @@ module.exports = {
             "error",
             "never"
         ],
-        "prefer-const": "error",
         "quote-props": [
             "error",
             "consistent-as-needed"
@@ -179,8 +140,38 @@ module.exports = {
             }
         ],
         "spaced-comment": "error",
-        "ter-indent": [true, 2],
         "use-isnan": "error",
-        "valid-typeof": "off"
+        "valid-typeof": "off",
+        "@typescript-eslint/tslint/config": [
+            "error",
+            {
+                "rules": {
+                    "import-spacing": true,
+                    "jsdoc-format": true,
+                    "no-reference-import": true,
+                    "one-line": [
+                        true,
+                        "check-catch",
+                        "check-else",
+                        "check-finally",
+                        "check-open-brace",
+                        "check-whitespace"
+                    ],
+                    "ter-indent": [
+                        true,
+                        2
+                    ],
+                    "whitespace": [
+                        true,
+                        "check-branch",
+                        "check-decl",
+                        "check-operator",
+                        "check-separator",
+                        "check-type",
+                        "check-typecast"
+                    ]
+                }
+            }
+        ]
     }
-};
+}
