--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "@types/sinon-chrome": "^2.2.6",
     "@types/text-encoding": "^0.0.35",
     "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
+    "@typescript-eslint/eslint-plugin": "2.16.0",
+    "@typescript-eslint/eslint-plugin-tslint": "2.16.0",
+    "@typescript-eslint/parser": "2.16.0",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
