--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "wif": "2.0.6"
   },
   "devDependencies": {
-    "@blockone/tslint-config-blockone": "^4.0.1",
+    "@blockone/eslint-config-blockone": "^3.0.0",
     "@types/bs58": "^4.0.0",
     "@types/chrome": "^0.0.74",
     "@types/classnames": "^2.2.7",
@@ -68,11 +68,6 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
     "html-webpack-plugin": "^3.2.0",
     "jest-coverage-ratchet": "^0.2.3",
     "node-fetch": "^2.3.0",
@@ -82,7 +77,6 @@
     "sinon-chrome": "^2.3.2",
     "text-encoding": "^0.7.0",
     "ts-loader": "^3.5.0",
-    "tslint-eslint-rules": "^5.3.1",
     "typescript": "^3.3.3333",
     "worker-loader": "^2.0.0"
   },
@@ -105,7 +99,7 @@
     "test-coverage": "react-scripts-ts test --coverage --env=jsdom --no-cache",
     "test-ratchet": "jest-coverage-ratchet",
     "eject": "react-scripts-ts eject",
-    "lint": "tslint \"src/**/*.ts{,?}\""
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src"
   },
   "jest": {
     "collectCoverageFrom": [
